# python-project-49

./: Makefile  Makifile  README.md  pyproject.toml
brain_games/: engine.py
brain_games/games/: .calc.py.swp  .even.py.swo  .even.py.swp  .progression.py.swp  calc.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
