[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This project includes five mini-games: brain-even, brain-calc, brain-progression, brain-gcd, brain-prime."
authors = ["Sergei Kuznetsov <s8kuznetsov888@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"},]
repository = "https://github.com/sergeikuz/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
